[feat] pestaña y estilos de la base de datos terminado

--- a/videojuegosProyecto/main/templates/index.html
+++ b/videojuegosProyecto/main/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
+{% load static %}
 
-{% block link_css %}<link rel="stylesheet" href="static/css/index_styles.css">{% endblock %}
+{% block link_css %} <link rel="stylesheet" href="{% static 'css/index_styles.css' %}"> {% endblock %}
 {% block contenido %}
 <div class="welcome-container">
     <h1>¡Los 250 mejores juegos de la historia a un solo click!</h1>
