--- a/videojuegosProyecto/main/templates/base.html
+++ b/videojuegosProyecto/main/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Retro Games Web</title>
 
+
     <!-- Estilos de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Iconos de FontAwesome -->
@@ -12,7 +13,8 @@
     <!-- Fuente estilo "Pixel Art" -->
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- Archivo CSS personalizado -->
-    <link rel="stylesheet" href="static/css/base_styles.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/base_styles.css' %}">
 	{% block link_css %}{% endblock %}
 
 </head>
@@ -60,13 +62,13 @@
 		</div>
 		<div class="pacman-container">
 			<!-- Pac-Man y fantasmas a la izquierda -->
-			<img src="static/img/pacman-1-unscreen.gif" alt="Pac-Man izquierda" class="pacman-left">
+			<img src="{% static 'img/pacman-1-unscreen.gif' %}" alt="Pac-Man izquierda" class="pacman-left">
 			
 			<!-- Nuevos elementos en el centro -->
-			<img src="static/img/nave1.gif" alt="nave" class="rocket">
+			<img src="{% static 'img/nave1.gif' %}" alt="nave" class="rocket">
 			
 			<!-- Pac-Man y fantasmas a la derecha -->
-			<img src="static/img/pacman-2-unscreen.gif" alt="Pac-Man derecha" class="pacman-right">
+			<img src="{% static 'img/pacman-2-unscreen.gif' %}" alt="Pac-Man derecha" class="pacman-right">
 		</div>
 	</footer>
 	
