--- a/videojuegosProyecto/main/templates/base.html
+++ b/videojuegosProyecto/main/templates/base.html
@@ -75,6 +75,8 @@
 
     <!-- Scripts de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    {% block link_script %}{% endblock %}
+
 
 </body>
 </html>
