--- a/videojuegosProyecto/main/templates/database.html
+++ b/videojuegosProyecto/main/templates/database.html
@@ -4,6 +4,8 @@
 {% block contenido %}
 <div class="carga-container">
     <p class="carga-text">Pulsa aquí para realizar la carga de la base de datos</p>
-    <a href="#" class="btn-neon">Cargar Base de Datos</a>
+    <button id="btn-cargar" class="btn-neon">Cargar Base de Datos</button>
 </div>
 {% endblock %}
+
+{% block link_script %}<script src="{% static 'scripts/database_script.js' %}"></script>{% endblock %}
