[feat] posicionamiento e insercion de contadores

--- a/videojuegosProyecto/main/templates/database.html
+++ b/videojuegosProyecto/main/templates/database.html
@@ -5,6 +5,14 @@
 <div class="carga-container">
     <p class="carga-text">Pulsa aquí para realizar la carga de la base de datos</p>
     <button id="btn-cargar" class="btn-neon">Cargar Base de Datos</button>
+    <p id="status-message" class="status-message"></p> 
+</div>
+
+<div class="stats-container">
+    <p id="juegos-contador" class="stats-text">Juegos insertados: 0</p>
+    <p id="plataformas-contador" class="stats-text">Plataformas insertadas: 0</p>
+    <p id="desarrolladores-contador" class="stats-text">Desarrolladores insertados: 0</p>
+    <p id="companias-contador" class="stats-text">Compañías insertadas: 0</p>
 </div>
 {% endblock %}
 
