--- a/videojuegosProyecto/static/css/base_styles.css
+++ b/videojuegosProyecto/static/css/base_styles.css
@@ -28,7 +28,7 @@ body {
 .container {
     background: rgba(0, 0, 0, 0.85);
     border-radius: 15px;
-    padding-bottom: 15px;
+    padding: 30px;
     box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.6);
     width: 90%;
     max-width: 1200px;
