--- a/videojuegosProyecto/main/templates/buscar_nombre.html
+++ b/videojuegosProyecto/main/templates/buscar_nombre.html
@@ -6,8 +6,8 @@
 
 {% block contenido %}
 <div class="busqueda-container">
-    <label for="busqueda-anio" class="busqueda-label">Introduce un año:</label>
-    <input type="text" id="busqueda-anio" class="busqueda-input">
+    <label for="busqueda-nombre" class="busqueda-label">Introduce el nombre:</label>
+    <input type="text" id="busqueda-nombre" class="busqueda-input">
     <button id="buscar-btn" class="buscar-btn">🔎 Buscar</button>
 </div>
 
