--- a/videojuegosProyecto/main/templates/busqueda.html
+++ b/videojuegosProyecto/main/templates/busqueda.html
@@ -9,7 +9,7 @@
     <h2 class="busqueda-title">🔍 Selecciona un método de búsqueda</h2>
 
     <div class="busqueda-opciones">
-        <a href="/busqueda/anyo" class="busqueda-btn">📅 Buscar por Año</a>
+        <a href="/busqueda/nombre" class="busqueda-btn">📅 Buscar por Nombre</a>
         <a href="/busqueda/plataforma" class="busqueda-btn">🎮 Buscar por Plataforma</a>
         <a href="/busqueda/desarrollador" class="busqueda-btn">👨‍💻 Buscar por Desarrollador</a>
         <a href="/busqueda/compania" class="busqueda-btn">🏢 Buscar por Compañía</a>
