--- a/videojuegosProyecto/main/templates/buscar_compania.html
+++ b/videojuegosProyecto/main/templates/buscar_compania.html
@@ -7,8 +7,7 @@
 {% block contenido %}
 <div class="busqueda-container">
     <label for="busqueda-compania" class="busqueda-label">Selecciona una compañía:</label>
-    <select id="busqueda-compania" class="busqueda-select">
-    </select>
+    <select id="busqueda-compania" class="busqueda-select"></select>
     <button id="buscar-btn" class="buscar-btn">🔎 Buscar</button>
 </div>
 
