[WIP] busqueda por desarrollador terminada

--- a/videojuegosProyecto/main/templates/buscar_compania.html
+++ b/videojuegosProyecto/main/templates/buscar_compania.html
@@ -16,5 +16,5 @@
 {% endblock %}
 
 {% block link_script %}
-    <script src="{% static 'scripts/busqueda_script.js' %}"></script>
+    <script src="{% static 'scripts/busqueda_compania_script.js' %}"></script>
 {% endblock %}
