--- a/videojuegosProyecto/main/templates/buscar_nombre.html
+++ b/videojuegosProyecto/main/templates/buscar_nombre.html
@@ -15,5 +15,5 @@
 {% endblock %}
 
 {% block link_script %}
-    <script src="{% static 'scripts/busqueda_script.js' %}"></script>
+    <script src="{% static 'scripts/busqueda_nombre_script.js' %}"></script>
 {% endblock %}
