[WIP] implementacion del sistema de recomendaciones

--- a/videojuegosProyecto/main/templates/buscar_desarrollador.html
+++ b/videojuegosProyecto/main/templates/buscar_desarrollador.html
@@ -17,4 +17,5 @@
 
 {% block link_script %}
     <script src="{% static 'scripts/busqueda_desarrollador_script.js' %}"></script>
+    <script src="{% static 'scripts/recomendacion_script.js' %}"></script>
 {% endblock %}
