--- a/videojuegosProyecto/main/templates/buscar_nombre.html
+++ b/videojuegosProyecto/main/templates/buscar_nombre.html
@@ -16,4 +16,5 @@
 
 {% block link_script %}
     <script src="{% static 'scripts/busqueda_nombre_script.js' %}"></script>
+    <script src="{% static 'scripts/recomendacion_script.js' %}"></script>
 {% endblock %}
