--- a/videojuegosProyecto/main/templates/buscar_plataforma.html
+++ b/videojuegosProyecto/main/templates/buscar_plataforma.html
@@ -18,5 +18,6 @@
 
 {% block link_script %}
     <script src="{% static 'scripts/busqueda_plataforma_script.js' %}"></script>
+    <script src="{% static 'scripts/recomendacion_script.js' %}"></script>
 {% endblock %}
 
