--- a/videojuegosProyecto/main/templates/buscar_compania.html
+++ b/videojuegosProyecto/main/templates/buscar_compania.html
@@ -17,4 +17,5 @@
 
 {% block link_script %}
     <script src="{% static 'scripts/busqueda_compania_script.js' %}"></script>
+    <script src="{% static 'scripts/recomendacion_script.js' %}"></script>
 {% endblock %}
